Fix critical layout bug: corrected SCSS front matter

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,11 +16,8 @@
 
 
 
-.wrapper {
-  max-width: 95% !important;
-  padding-left: 15px !important;
-  padding-right: 15px !important;
-}
+
+
 
 img {
   max-width: 100%;
@@ -70,10 +67,8 @@ body::before {
   mix-blend-mode: multiply;
 }
 
-.page-content,
-.wrapper {
-  background: transparent !important;
-}
+
+
 
 .site-title {
   font-family: 'Inter', 'Times New Roman', Times, serif !important;
